--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   story_view: ^0.15.0
+  image_picker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
